# wikipedia-content-analyzer

./: .gitignore  README.md
backend/: .gitignore  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: articles.py  wiki_api_routes.py
backend/app/core/: config.py
backend/app/crud/: article.py
backend/app/database/: models.py
backend/app/schemas/: article.py  wikipedia.py
backend/app/services/: wikipedia_api.py
backend/migrations/: env.py
backend/tests/api/: test_wikipedia.py
backend/tests/crud/: test_article.py
frontend/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: articles.ts  wikipedia.ts
frontend/src/components/: ArticleCard.tsx  ArticleDetail.tsx  ArticleList.tsx  LoadingSpinner.css  LoadingSpinner.tsx  SavedArticlesList.tsx  SearchBar.tsx
frontend/src/pages/: HomePage.tsx  SavedArticlesPage.tsx
frontend/src/types/: article.ts  wikipedia.ts
